--- a/app/assets/stylesheets/blacklight.scss
+++ b/app/assets/stylesheets/blacklight.scss
@@ -1,15 +1,5 @@
-@import "bootstrap-sprockets";
+@import 'bootstrap-sprockets';
 
 @import 'bootstrap';
 
 @import 'blacklight/blacklight';
-
-@import "bootswatch/readable/variables";
-
-@import "bootstrap";
-
-@import "bootswatch/readable/bootswatch";
-
-@import 'blacklight/blacklight';
-
-
