--- a/app/views/_user_util_links.html.erb
+++ b/app/views/_user_util_links.html.erb
@@ -5,12 +5,15 @@
     <% end %>
   </ul>
 
+<%# Comment out for now to remove login link which is not needed until we do CAS integration.  PJA 9/14/2016 %>
+<% if false %>
   <% if has_user_authentication_provider? %>
     <ul class="nav navbar-nav">
       <% if current_user %>
       <li>
         <%= link_to 'Upload', indexitems_path %>
       </li>
+      
       <li>
         <%= link_to t('blacklight.header_links.logout'), destroy_user_session_path %>
       </li>
@@ -24,6 +27,7 @@
         <%= link_to t('blacklight.header_links.login'), new_user_session_path %>
       </li>
       <% end %>
+<% end %>   
       </ul>
   <% end %>
 </div>
