--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,27 @@
 // application.scss
-.navbar-brand { width:300px !important; }   /* PJA:  Override width of header image */
+.navbar-brand {  background: transparent !important;}   /* PJA:  Override width of header image */
+.navbar-inverse { background-image: url("body-bg.jpg") !important; }
+.navbar-nav a { color: #fff !important;}
+.iubrand-text { font-family: BentonSansCondensedRegular, Arial Narrow, Arial, Helvetica, sans-serif; 
+                font-size: 1em;
+                letter-spacing: 0.025em;
+                line-height: 1em;
+                text-align: left;
+                color: white; 
+                text-transform: uppercase; 
+                padding: 0 0 0 75px;
+}
+.dskbbrand-text { font-family: BentonSansCondensedRegular, Arial Narrow, Arial, Helvetica, sans-serif; 
+                font-size: 2.5em;
+                letter-spacing: 0.05em;
+                text-align: left;
+                color: white; 
+                text-decoration: none;
+                position: absolute;
+                transform: translateY(1px);
+                padding: 0px 0 0 75px;
+}
+
+
 @import "bootstrap-sprockets";
 @import 'blacklight';
