adjust header text

--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -19,7 +19,7 @@
     </div>
 
     <div class="collapse navbar-collapse" id="user-util-collapse">
-     <a href="/"><font class="dskbbrand-text">DSKB</font></a>
+     <a href="/"><font class="dskbbrand-text">Data Science Knowledge Base</font></a>
     <%= render :partial=>'/user_util_links' %>
     </div>
   </div>
