--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -1,18 +1,69 @@
-<div class="page-header row">
+<!-- <div class="page-header row">
 <%= image_tag("DSKBLogo50.png", :alt => "Indiana DSKB", :width => "600") %>
 </div>
-
-<div id="welcome message">
-  <h2>Welcome!  To get started:</h2>
-  <div>
-  <ul>
-    <li>Enter any string to search, or just click the Search button to see everything.</li>
-    <li>Use Record Type to filter between Solution Write-ups, Data Science Concepts and Tools</li>
-    <li>Click on the title of any search entry to see full details</li>
-  </ul>
-  </div>
+-->
+<div class="well dskb">
+  <h1 style="color: #990000">Welcome to the Data Science Knowledge Base!</h1>
+  <p style="font-weight: bold">Learn about the tools, concepts, and data used in actual data science solutions.  Re-apply in your own solutions!</p>
 </div>
 
+<div class="row">
+  <div class="col-lg-6">
+    <h2>Getting Started</h2>
+      <ul>
+      <li>Enter any string to search, or just click the Search button to see everything.</li>
+      <li>Use Record Type to filter between Solution Write-ups, Data Science Concepts and Tools.</li>
+      <li>Click on the title of any search entry to see full details.</li>
+      <li>Use the button below to learn more about the content available and how it is organized.</li>
+    </ul>
+    <p align="center"><a class="btn btn-primary" href="#">Learn More &raquo;</a></p>
+  </div>
+
+  <div class="col-lg-6">
+    <h2>Featured Content</h2>
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
+ 
+    <!-- Wrapper for slides -->
+    <!-- PJA note:  had to add requires bootstrap line in app/assets/javascripts/application.js file -->
+    <div class="carousel-inner">
+      
+    <div class="item active">
+      <a href="https://www.youtube.com/channel/UC_OR_L6rgJI20QjSWRLBvWA"><img src="http://placehold.it/800x450/990000/ffffff" alt="..."></a>
+      <div class="carousel-caption">
+      	<h3>Data Science Talks</h3>
+       </div>
+    </div>
+    
+    <div class="item">
+      <img src="http://placehold.it/800x450/009900/ffffff" alt="...">
+      <div class="carousel-caption">
+      	<h3>OnRamp Number 1</h3>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://placehold.it/800x450/000099/ffffff" alt="...">
+      <div class="carousel-caption">
+      	<h3>OnRamp Number 2</h3>
+      </div>
+    </div>
+  </div>
+ 
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+  </div> <!-- Carousel -->
+  </div>
+</div>
 
 <script>
   $(function() {
@@ -29,3 +80,5 @@
     });
   });
 </script>
+
+
