--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -17,6 +17,7 @@
       <li>Use the button below to learn more about the content available and how it is organized.</li>
     </ul>
     <p align="center"><a class="btn btn-primary" href="#">Learn More &raquo;</a></p>
+     <p align="center"><a class="btn btn-success" href="#">Contribute Content &raquo;</a></p>
   </div>
 
   <div class="col-lg-6">
@@ -31,25 +32,25 @@
  
     <!-- Wrapper for slides -->
     <!-- PJA note:  had to add requires bootstrap line in app/assets/javascripts/application.js file -->
-    <div class="carousel-inner">
+    <div class="carousel-inner" >
       
     <div class="item active">
-      <a href="https://www.youtube.com/channel/UC_OR_L6rgJI20QjSWRLBvWA"><img src="http://placehold.it/800x450/990000/ffffff" alt="..."></a>
-      <div class="carousel-caption">
-      	<h3>Data Science Talks</h3>
+      <a href="https://www.youtube.com/channel/UC_OR_L6rgJI20QjSWRLBvWA"><%= image_tag("content-highlight/IUDataScience.jpg") %></a>
+      <div class="carousel-caption" style="top: 0; bottom: auto;">
+      	<h2>Data Science Talks</h2>
        </div>
     </div>
     
     <div class="item">
-      <img src="http://placehold.it/800x450/009900/ffffff" alt="...">
-      <div class="carousel-caption">
-      	<h3>OnRamp Number 1</h3>
+      <%= image_tag("content-highlight/onramp.jpg") %>
+      <div class="carousel-caption" style="top: 0; bottom: auto;">
+      	<h2>OnRamp Number 1</h2>
       </div>
     </div>
     <div class="item">
-      <img src="http://placehold.it/800x450/000099/ffffff" alt="...">
-      <div class="carousel-caption">
-      	<h3>OnRamp Number 2</h3>
+      <%= image_tag("content-highlight/onramp2.jpg") %>
+      <div class="carousel-caption" style="top: 0; bottom: auto;">
+      	<h2>OnRamp Number 2</h2>
       </div>
     </div>
   </div>
