Add static pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 .iubrand-text { font-family: BentonSansCondensedRegular, Arial Narrow, Arial, Helvetica, sans-serif; 
                 font-size: 1em;
                 letter-spacing: 0.025em;
+                white-space: nowrap;
                 line-height: 1em;
                 text-align: left;
                 color: white; 
