--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -13,13 +13,12 @@
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
     </button>
-
+     <a href="/"><font class="dskbbrand-text">DSKB</font></a>
     </div>
 
     <div class="collapse navbar-collapse" id="user-util-collapse">
-     <a href="/"><font class="dskbbrand-text">Data Science Knowledge Base</font></a>
+
     <%= render :partial=>'/user_util_links' %>
     </div>
   </div>
