upate home page

--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -16,8 +16,8 @@
       <li>Click on the title of any search entry to see full details.</li>
       <li>Use the button below to learn more about the content available and how it is organized.</li>
     </ul>
-    <p align="center"><a class="btn btn-primary" href="#">Learn More &raquo;</a></p>
-     <p align="center"><a class="btn btn-success" href="#">Contribute Content &raquo;</a></p>
+    <p align="center"><a class="btn btn-primary" href="/static_pages/about">Learn More &raquo;</a></p>
+     <p align="center"><a class="btn btn-success" href="/static_pages/contribute">Contribute Content &raquo;</a></p>
   </div>
 
   <div class="col-lg-6">
