--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -7,14 +7,15 @@
  </div>
 </div>
 <div id="header-navbar" class="navbar navbar-inverse navbar-static-top" role="navigation">
-  <div class="<%= container_classes %>">
+<div class="<%= container_classes %>">
     <div class="navbar-header">
     <button type="button" class="navbar-toggle btn collapsed" data-toggle="collapse" data-target="#user-util-collapse">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
-    </button>
-     <a href="/"><font class="dskbbrand-text">DSKB</font></a>
+      <span class="icon-bar"></span>
+     </button>
+    <a href="/"><font class="dskbbrand-text">DSKB</font></a>
     </div>
 
     <div class="collapse navbar-collapse" id="user-util-collapse">
