--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -15,7 +15,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
      </button>
-    <a href="/"><font class="dskbbrand-text">DSKB</font></a>
+    <a style="text-decoration: none" href="/"><font class="dskbbrand-text">DSKB</font></a>
     </div>
 
     <div class="collapse navbar-collapse" id="user-util-collapse">
