update featured content images

--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -21,7 +21,7 @@
   </div>
 
   <div class="col-lg-6">
-    <h2>Featured Content</h2>
+    <h2>Featured Training Resources</h2>
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -35,20 +35,19 @@
     <div class="carousel-inner" >
       
     <div class="item active">
-      <a href="https://www.youtube.com/channel/UC_OR_L6rgJI20QjSWRLBvWA"><%= image_tag("content-highlight/IUDataScience.jpg") %></a>
+      <a href="https://www.youtube.com/channel/UC_OR_L6rgJI20QjSWRLBvWA"><%= image_tag("content-highlight/IUYoutube.png", :class => "dskbCarouselImg") %></a>
       <div class="carousel-caption" style="top: 0; bottom: auto;">
-      	<h2>Data Science Talks</h2>
        </div>
     </div>
     
     <div class="item">
-      <%= image_tag("content-highlight/onramp.jpg") %>
+      <%= image_tag("content-highlight/onramp.jpg", :class => "dskbCarouselImg") %>
       <div class="carousel-caption" style="top: 0; bottom: auto;">
       	<h2>OnRamp Number 1</h2>
       </div>
     </div>
     <div class="item">
-      <%= image_tag("content-highlight/onramp2.jpg") %>
+      <%= image_tag("content-highlight/onramp2.jpg", :class => "dskbCarouselImg") %>
       <div class="carousel-caption" style="top: 0; bottom: auto;">
       	<h2>OnRamp Number 2</h2>
       </div>
